--- a/Pages/Alice_Lindkvist.html
+++ b/Pages/Alice_Lindkvist.html
@@ -10,7 +10,7 @@
   <div>
    <a href="index.html">Startsida</a>
   <h1>Alice Lindkvist</h1>
-  <img id="profilePicture" src="IMG_9445-2.jpg" alt="Jonkoping">
+  <img id="profilePicture" src="/Assets/Images/IMG_9445-2.jpg" alt="Jonkoping">
   <ul>
     <li>Göra håruppsättningar</li>
     <li>Konståkning</li>
