--- a/Pages/index.html
+++ b/Pages/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Startsida</title>
+    <link rel="stylesheet" href="/Styles/style.css" >
 </head>
 <body>
     <h1>Välkommen</h1>
