--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h1>Välkommen</h1>
     <h2>Till grupp 3 kontaktbok</h2>
     <ul>
-    <li> <a href="Alice_Lindkvist.html" >Alice</a> </li>
-    <li> <a href="sonny_johansson.html" >Sonny</a> </li>
-    <li> <a href="sabina_halilovic.html" >Sabina</a> </li>
-    <li> <a href="phu_nguyen.html" >Phu </a></li>
+    <li> <a href="/Pages/Alice_Lindkvist.html" >Alice</a> </li>
+    <li> <a href="/Pages/sonny_johansson.html" >Sonny</a> </li>
+    <li> <a href="/Pages/sabina_halilovic.html" >Sabina</a> </li>
+    <li> <a href="/Pages/phu_nguyen.html" >Phu </a></li>
     </u>
 </body>
 </html>
