--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Startsida</title>
-    <link rel="stylesheet" href="/Styles/style.css" >
+    <link rel="stylesheet" href="src/Styles/style.css" >
 </head>
 <body>
     <h1>Välkommen</h1>
     <h2>Till grupp 3 kontaktbok</h2>
     <ul>
-    <li> <a href="/Pages/Alice_Lindkvist.html" >Alice</a> </li>
-    <li> <a href="/Pages/sonny_johansson.html" >Sonny</a> </li>
-    <li> <a href="/Pages/sabina_halilovic.html" >Sabina</a> </li>
-    <li> <a href="/Pages/phu_nguyen.html" >Phu </a></li>
+    <li> <a href="Alice_Lindkvist.html" >Alice</a> </li>
+    <li> <a href="sonny_johansson.html" >Sonny</a> </li>
+    <li> <a href="sabina_halilovic.html" >Sabina</a> </li>
+    <li> <a href="phu_nguyen.html" >Phu </a></li>
     </u>
 </body>
 </html>
