--- a/phu_nguyen.html
+++ b/phu_nguyen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phu Nguyen</title>
-    <link rel="stylesheet" href="/Styles/phu_nguyenStyle.css">
+    <link rel="stylesheet" href="src/Styles/phu_nguyenStyle.css">
 </head>
 <body>
     <a href="index.html">Startsida</a>
@@ -13,7 +13,7 @@
     <h1>Phu Nguyen</h1>
 
     <div id="profilePictureBorder">
-        <img id="profilePicture" src="/Assets/Images/cow.webp">
+        <img id="profilePicture" src="src/Assets/Images/cow.webp">
     </div>
 
     <ul>
