--- a/sonny_johansson.html
+++ b/sonny_johansson.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Styles/sonny_johanssonStyle.css">
+    <link rel="stylesheet" href="src/Styles/sonny_johanssonStyle.css">
     <title></title>
 </head>
 <body>
@@ -11,7 +11,7 @@
         <div class="infobox">
         <a href="index.html">Tillbaka till startsidan</a>
         <h1>Sonny Johansson</h1>
-        <img id="profilePicture" src="/Assets/Images/profpic.jpg" alt="Profile Picture">
+        <img id="profilePicture" src="src/Assets/Images/profpic.jpg" alt="Profile Picture">
         <ul>
             <li>Ge mina döttrar fistbumps varje dag</li>
             <li>Gaming</li>
